# conversation-archaeologist

./: AI_AGENT_PROMPTS.md  ARCHITECTURE.md  CLAUDE.md  FILE_TREE.txt  GET_STARTED.md  LICENSE  PROJECT_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP.md  __init__.py  __main__.py  basic_extraction.py  branch_detector.py  cli.py  config.py  conversation_analyzer.py  example.env  extract.py  hybrid_extractor.py  json_exporter.py  logger.py  markdown_exporter.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_branch_detector.py  test_url_parser.py  url_parser.py
mnt/user-data/outputs/claude-conversation-extractor/src/claude_extractor/models/: __init__.py
mnt/user-data/outputs/conversation-archaeologist/: README.md  pyproject.toml  requirements.txt
mnt/user-data/outputs/conversation-archaeologist/mcp_server/: __init__.py
mnt/user-data/outputs/conversation-archaeologist/nano_agents/: __init__.py
mnt/user-data/outputs/conversation-archaeologist/tests/: __init__.py
nano_agents/: __init__.py  api_fetcher.py  batch_parser.py
scripts/: extract.py
tests/: __init__.py  test_api_fetcher.py  test_batch_parser.py  test_branch_detector.py  test_url_parser.py
